Update 4.Q.1 Easy Questions.md

--- a/DOMAIN4: Communication and Network Security/4.Q.1 Easy Questions.md
+++ b/DOMAIN4: Communication and Network Security/4.Q.1 Easy Questions.md
@@ -1,2 +1,480 @@
-## 4.Q.1 Easy Questions ##
+## Easy Questions ##
+
+1. You’ve noticed that your monitoring cameras connected to the security server are experiencing intermittent issues: the video feed occasionally disappears, and at other times, the image quality degrades significantly. What troubleshooting steps would you take first?
+
+A. Assess server and camera resources, monitor network traffic, and evaluate ambient lighting conditions.
+
+B. Test network cable crimpage, ping TTL settings, and check HTTP and HTTPS port statuses.
+
+C. Check hardware connections (cabling and plugging), test connectivity (ping), verify available bandwidth, and inspect TCP and UDP port 554.
+
+D. Review camera session management settings and credentials, verify network connectivity, and check server resources.
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: C. Check hardware connections (cabling and plugging), test connectivity (ping), verify available bandwidth, and inspect TCP and UDP port 554.
+
+This option focuses on the most probable root causes of intermittent video feed issues.
+Loose cabling or degraded physical connections can interrupt the data stream.
+Testing network connectivity and bandwidth helps determine if congestion or packet loss affects video quality.
+Finally, verifying port 554 (RTSP) ensures the streaming protocol used by most IP cameras functions properly.
+
+❌ A. Assess server and camera resources, monitor network traffic, and evaluate ambient lighting conditions.
+While checking server and network performance is useful, lighting conditions are unrelated to the data transmission issue. This option overlooks crucial hardware and connectivity tests.
+
+❌ B. Test network cable crimpage, ping TTL settings, and check HTTP and HTTPS port statuses.
+These steps focus on parameters (like ping TTL or HTTP ports 80/443) that are not directly tied to RTSP-based video streams. They may not resolve the root problem.
+
+❌ D. Review camera session management settings and credentials, verify network connectivity, and check server resources.
+This option partially helps—especially the network and server checks—but it misses physical connection and streaming port validation, which are often the first troubleshooting steps.
+
+Explanation:
+Intermittent or degraded video feeds often trace back to basic connectivity problems, bandwidth constraints, or protocol misconfigurations.
+The RTSP protocol, typically using TCP/UDP port 554, is responsible for streaming video data.
+Before moving to advanced diagnostics, CISSP professionals should always start with fundamental checks—physical layer verification, network health, and essential ports—to isolate the issue efficiently.
+
+</details>
+
+---
+
+2. What is the most effective method for creating a connection between two physical locations, both with internet connectivity, ensuring that users at each site can access multiple servers and clients without needing to handle complex configurations?
+
+A. Using a cloud identity service provider
+
+B. A reverse proxy at each location
+
+C. Implementing OAuth Federated Identity
+
+D. An IPsec VPN
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: D. An IPsec VPN
+
+An IPsec VPN (Internet Protocol Security Virtual Private Network) is the most effective solution for securely connecting two physical sites over the internet.
+It provides transparent, encrypted communication between networks, allowing users at each site to access shared resources as if they were on the same local network.
+The configuration is typically centralized and managed at the gateway or firewall, reducing the complexity for end users.
+
+❌ A. Using a cloud identity service provider
+While cloud identity services (like Azure AD or Okta) help manage user authentication and access, they do not create network connectivity between physical sites. They only handle who can access what — not how data travels between locations.
+
+❌ B. A reverse proxy at each location
+Reverse proxies improve web performance and security by forwarding client requests to backend servers, but they do not establish a full network tunnel between sites. They operate at the application layer (Layer 7), not the network layer (Layer 3), and are unsuitable for multi-server connectivity across locations.
+
+❌ C. Implementing OAuth Federated Identity
+OAuth provides authorization and token-based access control, often used in web or cloud apps. It doesn’t connect physical networks or allow transparent server-to-server communication. It addresses identity federation, not site-to-site networking.
+
+🧠 Explanation:
+An IPsec VPN operates at Layer 3 (Network Layer) of the OSI model, encrypting and authenticating IP packets between two networks.
+This makes it ideal for site-to-site connectivity, ensuring that users can securely access internal servers and clients across both locations without additional client configuration.
+CISSP professionals should recognize that VPNs (especially IPsec) offer confidentiality, integrity, and authenticity — three of the core pillars of InfoSec — while simplifying secure communication over the public internet.
+
+</details>
+
+---
+
+3. You and your development team have created an in-house solution that monitors and transmits data about worker activity on manufacturing machines within the local network (LAN) using HTTP. This solution aims to enhance efficiency and identify potential security risks. Given this setup, which of the following security risks is the solution most vulnerable to?
+
+A. Exposure to Distributed Denial-of-Service (DDoS) attacks
+
+B. Risk of ransomware compromising data integrity
+
+C. Susceptibility to brute-force attacks and unintentional IP data exposure
+
+D. Exposure to man-in-the-middle (MITM) attacks and potential personal data breaches
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: D. Exposure to man-in-the-middle (MITM) attacks and potential personal data breaches
+
+Since the solution uses HTTP (not HTTPS) within the LAN, data is transmitted in clear text, making it susceptible to man-in-the-middle attacks.
+An attacker on the same network could intercept, modify, or inject malicious content into the unencrypted traffic.
+This can lead to data manipulation, unauthorized access, and personal data breaches, particularly if worker activity or identifying information is being transmitted.
+
+Using HTTPS (HTTP over TLS) would mitigate these risks by encrypting data in transit, ensuring confidentiality and integrity.
+
+❌ A. Exposure to Distributed Denial-of-Service (DDoS) attacks
+DDoS attacks typically target systems accessible from the internet by overwhelming them with traffic.
+In this case, the system is operating on a local network (LAN), so exposure to external DDoS attacks is minimal unless internal flooding is introduced deliberately.
+
+❌ B. Risk of ransomware compromising data integrity
+While ransomware is always a potential risk, the scenario does not describe persistent storage or filesystems that could be encrypted and held hostage.
+The described system primarily transmits operational data, making ransomware less relevant as the primary concern.
+
+❌ C. Susceptibility to brute-force attacks and unintentional IP data exposure
+Brute-force attacks generally target authentication systems or password-based access, which are not mentioned here.
+IP data exposure is a secondary risk compared to unencrypted communications, as HTTP inherently lacks protection against interception and eavesdropping.
+
+Explanation:
+Using HTTP in a LAN may seem harmless, but it leaves the system wide open to interception by any insider with access to the network.
+Attackers can sniff packets, read transmitted data, or perform session hijacking to impersonate systems.
+This question reinforces a key CISSP principle: “Internal traffic is not automatically trusted.”
+Always use secure protocols like HTTPS, SSH, or TLS-based communication — even inside private networks.
+
+</details>
+
+---
+
+4. A large enterprise with a data-intensive network plans to implement Fiber Channel over Ethernet (FCoE) in its data centers to improve high-speed data access and efficiency. Before deploying FCoE, which aspects of the existing Ethernet network should be evaluated to ensure optimal compatibility and performance?
+
+A. Network switches and routers equipped with both Ethernet and fiber-optic ports
+
+B. Compliance with standard Ethernet protocols like 802.3 across network devices
+
+C. Routers that include Border Gateway Protocol (BGP) and Internet Control Message Protocol (ICMP) support
+
+D. High-bandwidth Ethernet switches (10GbE or greater) and network adapters compatible with Data Center Bridging (DCB) features
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: D. High-bandwidth Ethernet switches (10GbE or greater) and network adapters compatible with Data Center Bridging (DCB) features
+
+FCoE (Fibre Channel over Ethernet) requires a high-performance, low-latency Ethernet infrastructure.
+To prevent data loss during transmission, the network must support Data Center Bridging (DCB) — a suite of IEEE standards that enhance Ethernet with lossless transport, priority-based flow control, and bandwidth management.
+Additionally, 10 Gigabit Ethernet (10GbE) or faster connections are essential to handle the large throughput demands of storage traffic, ensuring efficient data transfer without congestion or bottlenecks.
+
+Without these capabilities, FCoE cannot achieve the reliability and consistency required for enterprise-grade storage communications.
+
+❌ A. Network switches and routers equipped with both Ethernet and fiber-optic ports
+While hybrid switches can support both Ethernet and Fibre Channel, FCoE is specifically designed to run over Ethernet, not native Fibre Channel.
+Fiber-optic ports may help in connecting legacy systems but are not required for FCoE functionality.
+
+❌ B. Compliance with standard Ethernet protocols like 802.3 across network devices
+802.3 compliance ensures basic Ethernet operation but does not guarantee support for lossless Ethernet or DCB extensions.
+Standard Ethernet alone may experience packet drops, which are unacceptable in storage environments that require data integrity and reliability.
+
+❌ C. Routers that include Border Gateway Protocol (BGP) and Internet Control Message Protocol (ICMP) support
+BGP and ICMP operate at higher OSI layers and are irrelevant to FCoE, which functions primarily at Layer 2 (Data Link).
+FCoE traffic is non-routable by design and stays within the local data center network — it depends on switching, not routing.
+
+CISSP Takeaway:
+FCoE bridges the gap between storage and Ethernet networks — but to perform effectively, it needs lossless Ethernet (DCB) and high-speed 10GbE infrastructure.
+Without these, the network risks packet loss and degraded performance, undermining the benefits of FCoE deployment.
+
+</details>
+
+---
+
+5. A financial services firm is establishing a secure file transfer system to facilitate the exchange of large, sensitive documents between its corporate clients and internal teams. With data security and integrity as top priorities, which of the following protocols would be the most suitable choice for this file transfer process?
+
+A. Simple Mail Transfer Protocol (SMTP)
+B. Secure Copy Protocol (SCP)
+C. File Transfer Protocol (FTP)
+D. SSH File Transfer Protocol (SFTP)
+
+<details> <summary>Show answer</summary>
+
+✅ Correct Answer: D. SSH File Transfer Protocol (SFTP)
+
+Explanation:
+SFTP (SSH File Transfer Protocol) is built on the Secure Shell (SSH) framework, providing end-to-end encryption, integrity checking, and authentication.
+Unlike its predecessor SCP, SFTP supports robust file management functions — including directory navigation, file deletion, and resume capabilities — making it ideal for enterprise use.
+
+SFTP ensures that sensitive financial documents remain confidential and unaltered during transit, meeting both data protection and regulatory compliance requirements.
+It is designed for large, managed, and auditable transfers, supporting enterprise-grade security with features like key-based authentication and encrypted control and data channels.
+
+❌ A. Simple Mail Transfer Protocol (SMTP)
+SMTP is designed for email transmission, not dedicated file transfer.
+While attachments can technically carry files, SMTP lacks encryption and integrity controls for secure data exchange and is subject to size limits that make it inefficient for large files.
+It is therefore unsuitable for structured, secure file exchanges in a financial environment.
+
+❌ B. Secure Copy Protocol (SCP)
+SCP, like SFTP, uses SSH for encryption, but it only supports basic file transfer commands.
+It lacks modern features such as directory listing, resume functionality, and detailed transfer logs.
+SCP is fast but not flexible enough for enterprise file management, making it inferior to SFTP for continuous, large-scale, or audited transfers.
+
+❌ C. File Transfer Protocol (FTP)
+FTP transmits files in plaintext, meaning credentials and data are vulnerable to interception.
+It does not provide encryption or integrity validation, violating the firm’s requirement for secure data handling.
+While simple and widely supported, it is obsolete for sensitive financial data transfers.
+
+---
+
+6. Which of the following Ethernet cable categories support data transmission speeds above 100 Mbps? (Choose all that apply)
+
+A. Cat10
+B. Cat6a 
+C. Cat6 
+D. Cat5 
+
+<details> <summary>Show answer</summary>
+
+Correct Answers:
+
+✅ B. Cat6a
+Cat6a (augmented Cat6) maintains 10 Gbps speeds over the full 100-meter range. It has improved insulation and reduced crosstalk, making it ideal for high-speed, stable connections exceeding 100 Mbps.
+
+✅ C. Cat6
+Category 6 supports up to 1 Gbps over 100 meters and can reach 10 Gbps over shorter distances (up to 55 meters). Cat6 is suitable for modern networks requiring speeds above 100 Mbps.
+
+Incorrect Answers:
+
+❌ A. Cat10
+There is no Cat10 standard in Ethernet specifications. The current top standard is Cat8, which supports up to 40 Gbps over short distances. Cat10 does not exist in any official Ethernet cabling standards.
+
+❌ D. Cat5
+Standard Cat5 cables were designed for speeds up to 100 Mbps. Although Cat5e exists and supports 1 Gbps, plain Cat5 cannot exceed 100 Mbps, making it unsuitable for higher-speed networks.
+
+Explanation:
+For modern high-speed networks exceeding 100 Mbps, Cat6 and Cat6a are recommended. Cat6a offers longer-distance 10 Gbps support with better insulation, while Cat6 is sufficient for shorter runs or 1 Gbps networks. Older standards like Cat5 or non-existent categories (Cat10) do not meet current performance requirements.
+
+</details>
+
+---
+
+7. While assessing the risk of sensitive data leakage through electromagnetic signals from network cables, your organization seeks an effective mitigation strategy. Which of the following methods would provide the highest level of protection against such leakage?
+
+A. Replace copper cables with fiber optic ones 
+B. Establish a mandatory data encryption policy 
+C. Apply shielding to all current network cables 
+D. Enforce stringent access controls over all physical network equipment 
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ A. Replace copper cables with fiber optic ones
+Fiber optic cables transmit data as light pulses rather than electrical signals, making them inherently resistant to electromagnetic interference (EMI) and very difficult to eavesdrop on. Unlike copper cables, fiber optics emit no electromagnetic radiation, effectively mitigating risks of electromagnetic leakage and protecting sensitive data.
+
+Incorrect Answers:
+
+❌ B. Establish a mandatory data encryption policy
+Encryption protects data confidentiality if intercepted, but it does not prevent electromagnetic emissions from occurring. While useful, it cannot stop eavesdropping on signals themselves.
+
+❌ C. Apply shielding to all current network cables
+Shielding (e.g., using STP cables) reduces EMI but does not completely eliminate electromagnetic radiation. It is also more costly and less effective over large networks compared to fiber optics.
+
+❌ D. Enforce stringent access controls over all physical network equipment
+Access controls are important for overall physical security but do not address electromagnetic eavesdropping risks.
+
+Explanation:
+For environments handling sensitive or classified data, fiber optic cabling provides the strongest defense against electromagnetic signal leakage. While encryption, shielding, and access controls add layers of security, only fiber optics inherently eliminate the risk of EMI-based data interception.
+
+</details>
+
+---
+
+8. A manufacturing company is conducting parallel testing on its newly established disaster recovery (DR) site. To validate the effectiveness of their disaster recovery setup, which specific aspect should be prioritized in their evaluation?
+
+A. The physical security controls in place at the disaster recovery facility ❌
+B. The responsiveness of the IT team during the transition to the disaster recovery site ❌
+C. The scalability of the DR site to accommodate future expansions in call traffic ❌
+D. The capability of the disaster recovery site to manage peak call volumes without impacting call quality ✅
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. The capability of the disaster recovery site to manage peak call volumes without impacting call quality
+The main purpose of a DR site is business continuity during emergencies. Parallel testing focuses on verifying that the DR site can handle peak operational demands without degrading service quality, which is critical for customer satisfaction and operational efficiency.
+
+Incorrect Answers:
+
+❌ A. The physical security controls in place at the disaster recovery facility
+While physical security is important to protect assets, parallel testing primarily evaluates operational effectiveness, not security measures.
+
+❌ B. The responsiveness of the IT team during the transition to the disaster recovery site
+Team responsiveness is relevant for operational readiness but is not the primary metric in validating the DR site’s functional capability during testing.
+
+❌ C. The scalability of the DR site to accommodate future expansions in call traffic
+Scalability is important for long-term planning, but parallel testing should focus on current operational capacity, ensuring the DR site meets present demand.
+
+Explanation:
+Parallel testing validates whether the DR site can effectively manage live workloads in case of disaster. The emphasis is on functional performance under peak loads, rather than physical security, personnel response, or future scalability.
+
+</details>
+
+---
+
+9. A financial institution is looking to implement a protocol for secure real-time communication between its various departments that also supports the archiving of messages. Which of the following protocols is BEST suited to meet these requirements while ensuring compliance with financial information privacy regulations?
+
+A. HTML with OAuth
+B. XML with SAML
+C. XMPP with TLS
+D. XML with HTTPS
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ C. XMPP with TLS
+Extensible Messaging and Presence Protocol (XMPP) with Transport Layer Security (TLS) is designed for instant messaging and real-time communication. TLS ensures encryption of messages in transit, while XMPP supports message archiving extensions (XEP-0136), allowing secure storage and retrieval of messages, which is critical for financial compliance.
+
+Incorrect Answers:
+
+❌ A. HTML with OAuth
+HTML is for structuring web content, and OAuth is an authorization protocol. This combination does not support real-time messaging or message archiving, making it unsuitable for the scenario.
+
+❌ B. XML with SAML
+SAML is used for authentication and federated identity management, not for real-time communication or message archiving. It cannot fulfill the secure messaging requirement.
+
+❌ D. XML with HTTPS
+While HTTPS encrypts data and XML can structure it, this combination does not natively support real-time communication or archiving. Additional mechanisms would be required, making it less suitable than XMPP with TLS.
+
+Explanation:
+For secure, compliant, real-time communication in a financial context, the protocol must provide encryption, real-time messaging, and message archiving. XMPP with TLS satisfies all three requirements, making it the best choice.
+
+</details>
+
+---
+
+10. Which of the following statements best describes iSCSI?
+
+A. iSCSI enhances the security and speed of communications between the main components and peripherals in a personal computer
+B. iSCSI is utilized in environments where implementing a fiber-optic infrastructure is not feasible
+C. iSCSI allows for the emulation of a high-performance local storage bus over a variety of networks, facilitating the creation of a Storage Area Network (SAN)
+D. iSCSI operates primarily within the ISO OSI layers 4, 5, and 6
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ C. iSCSI allows for the emulation of a high-performance local storage bus over a variety of networks, facilitating the creation of a Storage Area Network (SAN).
+iSCSI (Internet Small Computer Systems Interface) encapsulates SCSI commands into TCP/IP packets, enabling block-level storage over Ethernet networks. This allows organizations to build SANs without dedicated fiber-optic infrastructure, leveraging existing networks for high-performance storage communication.
+
+Incorrect Answers:
+
+❌ A. iSCSI enhances the security and speed of communications between the main components and peripherals in a personal computer
+This mischaracterizes iSCSI. It is designed for networked storage solutions, not for enhancing communications within a single PC.
+
+❌ B. iSCSI is utilized in environments where implementing a fiber-optic infrastructure is not feasible
+While iSCSI can be an alternative to fiber, this answer oversimplifies its use. iSCSI is widely used even where fiber exists because of its flexibility and cost-effectiveness.
+
+❌ D. iSCSI operates primarily within the ISO OSI layers 4, 5, and 6
+iSCSI operates mainly at Layer 4 (Transport layer), using TCP to ensure reliable delivery of SCSI commands. It leverages the network layer (Layer 3) for addressing and the data link layer (Layer 2) for node-to-node communication. It does not operate primarily at Layers 5 or 6.
+
+Explanation:
+iSCSI is a storage networking protocol that allows block-level data to be transmitted over standard IP networks. By encapsulating SCSI commands within TCP/IP, it enables SAN creation without costly fiber setups, ensuring flexibility, scalability, and efficient use of existing Ethernet infrastructure.
+
+</details>
+
+---
+
+11. Which of the following protocols is the best choice when rapid access to remote memory across a network is required?
+
+A. SWAN 
+B. Ethernet 
+C. FCoE 
+D. InfiniBand 
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. InfiniBand
+InfiniBand is designed for low-latency, high-throughput communication, making it ideal for scenarios requiring rapid access to remote memory. Its Remote Direct Memory Access (RDMA) capabilities allow efficient memory-to-memory transfers across a network with minimal CPU overhead. InfiniBand is commonly deployed in high-performance computing (HPC) environments where speed and efficiency are critical.
+
+Incorrect Answers:
+
+❌ A. SWAN
+Storage Wide Area Network (SWAN) is not a standardized protocol specifically designed for rapid remote memory access. It is not typically associated with low-latency, high-throughput memory operations.
+
+❌ B. Ethernet
+Standard Ethernet is widely used for networking but does not inherently provide the low-latency and high-throughput performance of InfiniBand. While Ethernet-based technologies like RDMA over Converged Ethernet (RoCE) exist, InfiniBand is generally preferred for extremely low-latency requirements.
+
+❌ C. FCoE (Fibre Channel over Ethernet)
+FCoE encapsulates Fibre Channel frames over Ethernet, primarily to transport storage traffic. While suitable for data center storage, it does not offer the same memory access speed and low-latency performance as InfiniBand.
+
+Explanation:
+When the primary goal is rapid remote memory access, InfiniBand stands out due to its RDMA support, low-latency design, and high throughput. Other protocols like Ethernet or FCoE serve broader networking or storage purposes but cannot match the performance characteristics required for fast memory operations.
+
+</details>
+
+---
+
+12. A company's IT team is analyzing recent security incidents and wants to improve its detection capabilities against Denial of Service (DoS) attacks. Some attackers use DoS as their main method, while others might only launch it when other intrusion attempts fail. Which tool or setup would most effectively detect a DoS attack in progress?
+
+A. TACACS
+B. Intrusion Detection System (IDS)
+C. Web Proxy Server
+D. Demilitarized Zone (DMZ)
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ B. Intrusion Detection System (IDS)
+A Network-Based IDS monitors traffic for suspicious patterns, including sudden spikes typical of DoS attacks. IDSs analyze multiple network points and can quickly alert administrators to ongoing DoS attempts, enabling faster response and mitigation.
+
+Incorrect Answers:
+
+❌ A. TACACS
+TACACS is an authentication and authorization protocol for network devices. It does not monitor traffic or detect DoS attacks.
+
+❌ C. Web Proxy Server
+Proxy servers manage and filter web traffic for performance and access control, but they are not designed to detect attacks. While they may observe unusual traffic, they cannot reliably identify a DoS attack.
+
+❌ D. Demilitarized Zone (DMZ)
+A DMZ isolates internal networks from external-facing services. While it can reduce exposure, it does not actively detect DoS attacks.
+
+Explanation:
+To detect a DoS attack effectively, organizations should rely on network monitoring tools like IDS. IDS can identify traffic anomalies, alert IT teams in real time, and help mitigate disruptions caused by malicious traffic floods, unlike authentication protocols or network segmentation alone.
+
+</details>
+
+---
+
+13. A network security analyst is assessing the security of an organization’s infrastructure and needs to identify firewall rules and determine which ports allow traffic through. The analyst wants to use a scan that can simulate an established connection to identify how the firewall responds to active connections. Which type of network discovery scan attempts to simulate an already open network connection?
+
+A. ARP scan
+B. Ping scan
+C. Service version scan
+D. TCP ACK scan
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ D. TCP ACK scan
+A TCP ACK scan sends an ACK packet, simulating an already established TCP connection (after the SYN-ACK handshake). Firewalls often track connection states, so an ACK scan can reveal how the firewall handles active connections, mapping rules without fully establishing new sessions. This method helps identify open ports allowed through firewalls while minimizing detection risk.
+
+Incorrect Answers:
+
+❌ Ping scan
+Uses ICMP echo requests to detect active hosts. It does not simulate an open connection and cannot reveal firewall rules or port access.
+
+❌ ARP scan
+Maps IP addresses to MAC addresses within a local subnet. It identifies devices but does not simulate connections or provide insight into firewall behavior.
+
+❌ Service version scan
+Probes open ports to determine running services and versions. Useful for reconnaissance, but it does not simulate an established connection or test firewall responses.
+
+Explanation:
+A TCP ACK scan is particularly valuable for firewall rule mapping, as it simulates ongoing sessions without performing a full TCP handshake. This allows analysts to detect allowed ports while maintaining stealth during network discovery.
+
+</details>
+
+---
+
+14. In your organization, the count of servers requiring internet access is growing, but your service provider is experiencing delays in assigning additional public IP addresses to the only one available at the moment. Which of the following methods can be employed to address this issue?
+
+A. DHCP (Dynamic Host Configuration Protocol)
+B. IP MAP
+C. PAT (Port Address Translation)
+D. Static IP
+
+<details> <summary>Show answer</summary>
+
+Correct Answer:
+
+✅ C. PAT (Port Address Translation)
+PAT allows multiple devices on a local network to share a single public IP address by mapping each device’s internal IP to a unique port number on the public IP. This ensures that traffic returning from the internet is correctly routed to the device that initiated the connection. PAT is widely used to handle situations where public IPs are limited.
+
+Incorrect Answers:
+
+❌ DHCP (Dynamic Host Configuration Protocol)
+DHCP dynamically assigns IP addresses within a local network but does not solve the shortage of public IP addresses for internet access. It only automates internal IP assignment.
+
+❌ IP MAP
+This is not a standard networking method and is likely included as a distractor. It does not exist in common networking practices.
+
+❌ Static IP
+Assigning a static IP gives a fixed public IP to a single server. This does not allow multiple servers to share the same public IP, so it doesn’t solve the limited public IP problem.
+
+Explanation:
+PAT (Port Address Translation) is a type of Network Address Translation (NAT) that enables multiple devices to share one public IP. It’s ideal when public IPs are scarce, as it translates internal private IPs to the public IP with unique port numbers, allowing simultaneous internet access for multiple devices.
+
+</details>
+
+---
 
