Update 4.2 Secure Network Component.md

--- a/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
+++ b/DOMAIN4: Communication and Network Security/4.2 Secure Network Component.md
@@ -18,8 +18,9 @@ For hardware to function effectively over time, warranty and support systems mus
 
 - Extended warranties: These warranties extend the coverage period for an additional cost. They can also provide additional support for issues like accidental damage or wear and tear.
 
-- Hardware operation covers a broad spectrum of devices, each with its own function and role in the overall infrastructure. These devices can be categorized into several types, including firewalls, network devices, and communication devices.
-A firewall is a network security device that monitors and controls incoming and outgoing network traffic based on predetermined security rules. Firewalls are designed to establish a barrier between a trusted internal network and untrusted external networks, such as the internet. Firewalls work by filtering traffic and blocking or allowing data based on a set of security rules. Their primary role is to protect networks from malicious activity and unauthorized access.
+Hardware operation covers a broad spectrum of devices, each with its own function and role in the overall infrastructure. These devices can be categorized into several types, including firewalls, network devices, and communication devices.
+
+A **firewall** is a network security device that monitors and controls incoming and outgoing network traffic based on predetermined security rules. Firewalls are designed to establish a barrier between a trusted internal network and untrusted external networks, such as the internet. Firewalls work by filtering traffic and blocking or allowing data based on a set of security rules. Their primary role is to protect networks from malicious activity and unauthorized access.
 There are several types of firewalls, each with its own strengths and use cases:
 
 | Firewall Type               | Description                                                                                                                              |
@@ -43,36 +44,37 @@ Firewalls can be deployed in several different architectures depending on the ne
 
 - DMZ (Demilitarized Zone): A DMZ is a separate network that sits between the internal network and the external internet. The firewall serves as a barrier between these networks, ensuring that sensitive internal systems are protected from external threats while allowing some services, like web servers, to be accessed from the outside world.
 
-Network devices are the building blocks of any communication infrastructure, allowing data to flow between different network segments and connecting various types of devices.
+Network devices are the building blocks of any communication infrastructure, allowing data to flow between different network segments and connecting various types of devices, like:
 
-- Repeaters amplify or regenerate signals to extend the reach of a network. They are commonly used in environments where signal strength may degrade over long distances, such as in fiber optic networks.
-
-
-- Concentrators combine multiple signals into one signal for more efficient transmission. They are typically used in wide-area networks (WANs) to reduce the number of transmission paths.
+- **Repeaters** amplify or regenerate signals to extend the reach of a network. They are commonly used in environments where signal strength may degrade over long distances.
 
 
-- Amplifiers boost the power of a signal to ensure it can travel over long distances without degradation.
+- **Concentrators** combine multiple signals into one signal for more efficient transmission. They are typically used in wide-area networks (WANs) to reduce the number of transmission paths.
 
 
-- Hubs: A hub is a basic network device that connects multiple devices within a local area network (LAN). It broadcasts data to all devices connected to it, which can lead to network congestion. Hubs have largely been replaced by more efficient devices like switches.
+- **Amplifiers** boost the power of a signal to ensure it can travel over long distances without degradation. An amplifier makes it louder, including the noise, a repeater restores the original signal, so it’s clean, and then sends it further.
 
 
-- Bridges: A bridge connects two separate networks, allowing them to function as a single network. It filters traffic based on MAC addresses and can help manage network traffic in larger LANs.
+- **Hubs:** A hub is a basic network device that connects multiple devices within a local area network (LAN). It broadcasts data to all devices connected to it, which can lead to network congestion. Hubs have largely been replaced by more efficient devices like switches.
 
 
-- Switches: A switch is a more advanced version of a hub. It intelligently forwards data packets to the specific device they are intended for by using MAC addresses. Switches are essential for improving network efficiency and reducing congestion.
+- **Bridges:** A bridge connects two separate networks, allowing them to function as a single network. It filters traffic based on MAC addresses and can help manage network traffic in larger LANs.
 
 
-- Routers: Routers are used to connect different networks together, such as connecting a local network to the internet. They forward data packets based on IP addresses and are responsible for determining the best path for data to travel.
+- **Switches:** A switch is a more advanced version of a hub. It intelligently forwards data packets to the specific device they are intended for by using MAC addresses. Switches are essential for improving network efficiency and reducing congestion.
 
 
-- Gateways: A gateway is a device that acts as a bridge between two different networks that may use different protocols. It enables communication between systems with incompatible network architectures.
+- **Routers:** Routers are used to connect different networks together, such as connecting a local network to the internet. They forward data packets based on IP addresses and are responsible for determining the best path for data to travel.
 
 
-- Proxies: A proxy server sits between a client and a server and acts as an intermediary for requests. It can help with security, caching, and improving performance by filtering requests and responses.
+- **Gateways:** A gateway is a device that acts as a bridge between two different networks that may use different protocols. It enables communication between systems with incompatible network architectures.
 
 
-- Access Points: An access point (AP) is a device that allows wireless devices to connect to a wired network. It extends the range of a wireless network and can provide additional services like security encryption and traffic management.
+- **Proxies:** A proxy server sits between a client and a server and acts as an intermediary for requests. It can help with security, caching, and improving performance by filtering requests and responses.
+
+
+- **Access Points:** An access point (AP) is a device that allows wireless devices to connect to a wired network. It extends the range of a wireless network and can provide additional services like security encryption and traffic management.
+
 
 ### Open Questions ###
 
